Refactored mappings